<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_primary"
    tools:context=".activities.MainActivity">

    <FrameLayout
        android:id="@+id/fl_actionBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_60sdp"
            android:layout_marginTop="@dimen/_minus15sdp"
            android:background="@drawable/background_action_bar" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/ntailub"
            android:padding="@dimen/_2sdp"
            android:text="@string/calendar"
            android:textColor="@color/color_text_secondary"
            android:textSize="@dimen/_15ssp" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:padding="5sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fl_actionBar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal"
            android:padding="@dimen/_5sdp">

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/btn_PreviousWeek"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:src="@drawable/ic_previous" />

            <TextView
                android:id="@+id/tv_MonthYear"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:fontFamily="@font/ntailub"
                android:textAlignment="center"
                android:textColor="@color/color_text_primary"
                android:textSize="20sp" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/btn_NextWeek"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:src="@drawable/ic_next" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/sun"
                android:textAlignment="center"
                android:textColor="@color/color_text_secondary"
                android:textSize="16sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/mon"
                android:textAlignment="center"
                android:textColor="@color/color_text_secondary"
                android:textSize="16sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/tue"
                android:textAlignment="center"
                android:textColor="@color/color_text_secondary"
                android:textSize="16sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/wed"
                android:textAlignment="center"
                android:textColor="@color/color_text_secondary"
                android:textSize="16sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/thur"
                android:textAlignment="center"
                android:textColor="@color/color_text_secondary"
                android:textSize="16sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/fri"
                android:textAlignment="center"
                android:textColor="@color/color_text_secondary"
                android:textSize="16sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/sat"
                android:textAlignment="center"
                android:textColor="@color/color_text_secondary"
                android:textSize="16sp" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/calenderRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>