<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_primary"
    tools:context=".activities.MainActivity">

    <FrameLayout
        android:id="@+id/fl_actionBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_60sdp"
            android:layout_marginTop="@dimen/_minus15sdp"
            android:background="@drawable/background_action_bar" />

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/ntailub"
            android:padding="@dimen/_2sdp"
            android:textColor="@color/color_text_secondary"
            android:textSize="@dimen/_15ssp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_logOut"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_gravity="end"
            android:layout_margin="@dimen/_5sdp"
            android:background="@drawable/ic_logout"
            android:backgroundTint="@color/color_text_secondary" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:padding="5sp"
        app:layout_constraintBottom_toTopOf="@id/btn_setNewEvent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fl_actionBar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal"
            android:padding="@dimen/_5sdp">

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/btn_PreviousWeek"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:src="@drawable/ic_previous" />

            <TextView
                android:id="@+id/tv_MonthYear"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:fontFamily="@font/ntailub"
                android:textAlignment="center"
                android:textColor="@color/color_text_primary"
                android:textSize="20sp" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/btn_NextWeek"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:src="@drawable/ic_next" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/sun"
                android:textAlignment="center"
                android:textColor="@color/color_text_secondary"
                android:textSize="16sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/mon"
                android:textAlignment="center"
                android:textColor="@color/color_text_secondary"
                android:textSize="16sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/tue"
                android:textAlignment="center"
                android:textColor="@color/color_text_secondary"
                android:textSize="16sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/wed"
                android:textAlignment="center"
                android:textColor="@color/color_text_secondary"
                android:textSize="16sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/thur"
                android:textAlignment="center"
                android:textColor="@color/color_text_secondary"
                android:textSize="16sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/fri"
                android:textAlignment="center"
                android:textColor="@color/color_text_secondary"
                android:textSize="16sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/sat"
                android:textAlignment="center"
                android:textColor="@color/color_text_secondary"
                android:textSize="16sp" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/calenderRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_weight="1" />

        <ListView
            android:id="@+id/eventsListView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/_5sdp"
            android:layout_weight="5"
            android:clipToPadding="false"
            android:divider="@android:color/transparent"
            android:dividerHeight="10.0sp"
            android:padding="@dimen/_20sdp" />

    </LinearLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fl_bottomView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_100sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_200sdp"
            android:background="@drawable/background_button_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/viewSupporter"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_marginTop="@dimen/_20sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_fullCalendar"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_48sdp"
            android:layout_marginEnd="@dimen/_50sdp"
            android:background="@drawable/background_button_set_event"
            android:fontFamily="@font/ntailub"
            android:gravity="center"
            android:text="@string/calendar"
            android:textColor="@color/color_primary"
            android:textSize="@dimen/_7ssp"
            app:layout_constraintBottom_toTopOf="@id/viewSupporter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/viewSupporter" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_showAllEvents"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_48sdp"
            android:layout_marginStart="@dimen/_50sdp"
            android:background="@drawable/background_button_set_event"
            android:fontFamily="@font/ntailub"
            android:gravity="center"
            android:src="@drawable/ic_next"
            android:text="@string/all_events"
            android:textColor="@color/color_primary"
            android:textSize="@dimen/_7ssp"
            app:layout_constraintBottom_toTopOf="@id/viewSupporter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/viewSupporter" />


    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_setNewEvent"
        android:layout_width="@dimen/_62sdp"
        android:layout_height="@dimen/_60sdp"
        android:background="@drawable/background_button_set_event"
        android:fontFamily="@font/ntailub"
        android:gravity="center"
        android:text="@string/set_event"
        android:textColor="@color/color_primary"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintBottom_toTopOf="@id/fl_bottomView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/fl_bottomView" />


</androidx.constraintlayout.widget.ConstraintLayout>