<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_primary"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".activities.SignInActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_60sdp"
            android:layout_marginTop="@dimen/_minus15sdp"
            android:background="@drawable/background_action_bar" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/ntailub"
            android:padding="@dimen/_2sdp"
            android:text="@string/sign_in"
            android:textColor="@color/color_text_secondary"
            android:textSize="@dimen/_15ssp" />
    </FrameLayout>

    <ImageView
        android:id="@+id/iv_appLogo"
        android:layout_width="@dimen/_120sdp"
        android:layout_height="@dimen/_120sdp"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        android:src="@drawable/splash_logo" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:hint="@string/username"
                android:textColorHint="@color/white"
                app:boxStrokeColor="@color/color_text_primary"
                app:hintTextColor="@color/color_text_primary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:fontFamily="@font/ntailub"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14ssp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:hint="@string/password"
                android:textColorHint="@color/white"
                app:boxStrokeColor="@color/color_text_primary"
                app:hintTextColor="@color/color_text_primary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:fontFamily="@font/ntailub"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14ssp" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_forgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:text="@string/forgot_password"
                android:textColor="@color/color_text_primary"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_signIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_50sdp"
                android:layout_marginTop="@dimen/_50sdp"
                android:layout_marginEnd="@dimen/_50sdp"
                android:background="@drawable/background_button_shape"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/ntailub"
                android:foreground="?android:attr/selectableItemBackground"
                android:text="@string/sign_in"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_15ssp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_signUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_50sdp"
                android:layout_marginTop="@dimen/_50sdp"
                android:layout_marginEnd="@dimen/_50sdp"
                android:background="@null"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/ntailub"
                android:foreground="?android:attr/selectableItemBackground"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_15ssp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>