<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_primary"
    android:orientation="vertical"
    tools:context=".activities.EventEditActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_60sdp"
            android:layout_marginTop="@dimen/_minus15sdp"
            android:background="@drawable/background_action_bar" />

        <TextView
            android:id="@+id/tv_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/ntailub"
            android:padding="@dimen/_2sdp"
            android:text="@string/set_event"
            android:textColor="@color/color_text_secondary"
            android:textSize="@dimen/_15ssp" />
    </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:hint="@string/title"
                android:textColorHint="@color/white"
                app:boxStrokeColor="@color/color_text_primary"
                app:hintTextColor="@color/color_text_primary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_eventTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:fontFamily="@font/ntailub"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14ssp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:hint="@string/description"
                android:textColorHint="@color/white"
                app:boxStrokeColor="@color/color_text_primary"
                app:hintTextColor="@color/color_text_primary">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_eventDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:fontFamily="@font/ntailub"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14ssp" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_eventSelectDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:background="@drawable/background_rectangle_shape"
                android:clickable="true"
                android:drawableEnd="@drawable/ic_arrow_right"
                android:drawableTint="@color/white"
                android:focusable="true"
                android:fontFamily="@font/ntailub"
                android:foreground="?android:attr/selectableItemBackground"
                android:gravity="start|center"
                android:hint="@string/select_date"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="@dimen/_13ssp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_eventSelectTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:background="@drawable/background_rectangle_shape"
                android:clickable="true"
                android:drawableEnd="@drawable/ic_arrow_right"
                android:drawableTint="@color/white"
                android:focusable="true"
                android:fontFamily="@font/ntailub"
                android:foreground="?android:attr/selectableItemBackground"
                android:gravity="start|center"
                android:hint="@string/select_time"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="@dimen/_13ssp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_eventCurrentDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:fontFamily="@font/ntailub"
                android:textColor="@color/color_text_primary"
                android:textSize="@dimen/_12ssp" />

            <TextView
                android:id="@+id/tv_eventCurrentTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:fontFamily="@font/ntailub"
                android:textColor="@color/color_text_primary"
                android:textSize="@dimen/_12ssp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_saveEvent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_50sdp"
                android:layout_marginTop="@dimen/_50sdp"
                android:layout_marginEnd="@dimen/_50sdp"
                android:background="@drawable/background_button_shape"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/ntailub"
                android:foreground="?android:attr/selectableItemBackground"
                android:text="@string/save"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_15ssp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_deleteEvent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_50sdp"
                android:layout_marginTop="@dimen/_50sdp"
                android:layout_marginEnd="@dimen/_50sdp"
                android:background="@drawable/background_button_delete_shape"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/ntailub"
                android:foreground="?android:attr/selectableItemBackground"
                android:text="@string/delete"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_15ssp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>